package modules.vision.structures;

public record FrameDataDTO(
        int intensity,
        int personCount
){
}
