package modules.music.structures;

public record Track(
        String name,
        String author,
        String id
){
}
