package modules.music.structures;

public record UserContextDTO (
        int tempo,
        Location location
) {
}
