- strategy Pattern
- repository
- adapter
- Mediator / Facade-Pattern

@startuml
' Layout-Einstellungen
skinparam packageStyle rectangle
skinparam linetype ortho

' ==========================================
' ORCHESTRATION LAYER (Mediator Pattern)
' ==========================================
package "core.orchestration" {
    class DjSessionManager {
        - visionService: VisionService
        - contextService: UserContextService
        - historyRepo: SessionHistoryRepository
        - learner: PreferenceLearner
        - songSelector: SongSelectorStrategy
        - player: MusicPlayerAdapter
        + onSongFinished(Track lastTrack)
        + triggerNextSong()
    }
    note right of DjSessionManager
      Fungiert als **Mediator**.
      Koordiniert den Datenfluss
      zwischen den Modulen.
    end note
}

' ==========================================
' VISION MODULE
' ==========================================
package "modules.vision" {
    class VisionService {
        + getCurrentFrameData(): FrameDataDTO
    }
    class FrameDataDTO <<DTO>> {
        + movementIntensity: float
        + crowdSize: int
    }
}

' ==========================================
' CONTEXT MODULE
' ==========================================
package "modules.userContext" {
    class UserContextService {
        + getCurrentContext(): UserContextDTO
    }
    class UserContextDTO <<DTO>> {
        + timeOfDay: String
        + targetVibe: String
    }
}

' ==========================================
' LEARNING & HISTORY MODULE (Neu)
' ==========================================
package "modules.learning" {
    interface SessionHistoryRepository <<Repository>> {
        + savePlayback(record: PlaybackRecord): void
        + getRecentPlaybacks(limit: int): List<PlaybackRecord>
    }

    class PlaybackRecord <<Entity>> {
        + trackId: String
        + trackFeatures: CellData
        + crowdFeedbackScore: float
    }

    interface PreferenceLearner <<Strategy>> {
        + calculateTargetProfile(history: List<PlaybackRecord>): LearnedProfileDTO
    }

    class MovingAverageLearner implements PreferenceLearner {
        + calculateTargetProfile(history: List<PlaybackRecord>): LearnedProfileDTO
    }

    class GmmPreferenceLearner implements PreferenceLearner {
        + calculateTargetProfile(history: List<PlaybackRecord>): LearnedProfileDTO
    }

    class LearnedProfileDTO <<DTO>> {
        + targetEnergy: float
        + targetTempo: float
    }
}

' ==========================================
' MUSIC MODULE
' ==========================================
package "modules.music" {
    interface SongSelectorStrategy <<Strategy>> {
        + selectNextSong(frame: FrameDataDTO, ctx: UserContextDTO, profile: LearnedProfileDTO, pool: List<Track>): Track
    }

    class ContextAwareSongSelector implements SongSelectorStrategy {
        - calculateDistance(cell: CellData, target: TargetVector): float
    }

    interface MusicPlayerAdapter <<Adapter>> {
        + play(track: Track): void
        + onPlaybackEnded(callback: Function): void
    }

    class SpotifyAdapter implements MusicPlayerAdapter {
        - spotifyApi: SpotifyApi
    }

    class Track {
        + id: String
        + name: String
    }

    class CellData {
        + energy: float
        + tempo: float
        + duration: float
    }
}

' ==========================================
' BEZIEHUNGEN (Dependencies & Associations)
' ==========================================

' Orchestrator Dependencies
DjSessionManager --> VisionService
DjSessionManager --> UserContextService
DjSessionManager --> SessionHistoryRepository
DjSessionManager --> PreferenceLearner
DjSessionManager --> SongSelectorStrategy
DjSessionManager --> MusicPlayerAdapter

' Data Flow Dependencies
DjSessionManager ..> FrameDataDTO : nutzt
DjSessionManager ..> UserContextDTO : nutzt
DjSessionManager ..> LearnedProfileDTO : nutzt
DjSessionManager ..> PlaybackRecord : speichert

VisionService ..> FrameDataDTO : generiert
UserContextService ..> UserContextDTO : generiert
PreferenceLearner ..> LearnedProfileDTO : generiert
PreferenceLearner ..> PlaybackRecord : liest

SongSelectorStrategy ..> FrameDataDTO : wertet aus
SongSelectorStrategy ..> UserContextDTO : wertet aus
SongSelectorStrategy ..> LearnedProfileDTO : wertet aus
SongSelectorStrategy ..> Track : liefert

SessionHistoryRepository *-- PlaybackRecord : speichert
Track *-- CellData : enthält
PlaybackRecord --> CellData : referenziert Features

@enduml